second phase refactoring finished 28.11.2025 20:42

--- a/src/lakes.yml
+++ b/src/lakes.yml
@@ -10,5 +10,12 @@ lakes:
         dropTable: "test"
         commands:
           - "text %player% &aВы выловили %itemname% из стартового озера стартовой удочкой!"
+    hologram:
+      x: 100
+      y: 100
+      z: 100
+      world: ""
+      scale: 0.025
+      text: ""
     baseCommands:
       - "msg %player% &aВы выловили что-то из стартового озера!"
