--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,7 +1,8 @@
 name: DreamFishing
 main: ua.hackhud.dreamFishing.Main
-version: 1.1
+version: 1.0
 softdepend: [WorldGuard, WorldEdit]
+depend: [DreamHolo, DreamHoloHandler]
 author: hackhud
 
 commands:
